--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
   },
   "dependencies": {
     "expo": "~38.0.8",
+    "expo-analytics-segment": "~8.2.1",
+    "expo-facebook": "~8.2.1",
+    "expo-firebase-recaptcha": "^1.1.3",
+    "expo-google-app-auth": "^8.1.2",
+    "expo-google-sign-in": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "firebase": "^7.19.0",
+    "native-base": "^2.13.14",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-dotenv": "^2.3.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-instagram-login": "^2.0.2",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^9.4.0",
+    "react-navigation": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
