--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dotenv": "^2.3.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-instagram-login": "^2.0.2",
+    "react-native-localization": "^2.1.6",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.4.0",
     "react-navigation": "^4.4.0"
